--- a/index (3).html
+++ b/index (3).html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOBORY WANNA SEE YOU TOGETHER </title>
+    <title>Meus objetivos do ano</title>
 </head>
 <body>
    
 </body>
 </html>
 <section class="conteudo-principal">
-    <h2 class="titulo-principal">MEU ANO CRIATIVO _</h2>
+    <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
 <div class="botoes">
     <button class="botao">Cursos na Alura</button>
     <button class="botao">Criar projetos em Javascript</button>
@@ -19,4 +19,12 @@
     <button class="botao">Atualizar meu currículo</button>
 </div>
 </section>
+<body>
+    <h2>Olá devs!</h2>
+    <div>
+        <p>Aula 01</p>
+        <a href="#"><p>Slides da Aula</p></a>
+    </div>
+</body>
+
 
